--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
             <div class="banner-overlay">
                 <div class="banner-content">
                     <h1 class="banner-title">Catálogo de </h1> <h1 class="banner-title" style="color: #FFDE11; font-weight: 700;">Obra Seco</h1>
-                    <p class="banner-subtitle">Soluciones de alta calidad para Obras de Construcion</p>
+                    <p class="banner-subtitle">Soluciones de alta calidad para Obras de Construcciòn</p>
                     <div class="banner-buttons">
                         <a href="#productos" class="btn btn-primary">Ver Productos</a>
-                        <a href="#contacto" class="btn btn-secondary">Contactar</a>
                     </div>
                 </div>
             </div>
@@ -156,7 +155,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Industrial Catalog</h3>
+                    <h3>Obra Seco Importaciones</h3>
                     <p>Líder en soluciones industriales con más de 25 años de experiencia en el mercado.</p>
                     <div class="social-links">
                         <a href="https://wa.me/5491160104818?text=Hola,%20me%20interesa%20información%20sobre%20sus%20productos%20industriales" target="_blank" class="social-link whatsapp">
