--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="banner-overlay">
                 <div class="banner-content">
                     <h1 class="banner-title">Catálogo de </h1> <h1 class="banner-title" style="color: #FFDE11; font-weight: 700;">Obra Seco</h1>
-                    <p class="banner-subtitle">Soluciones de alta calidad para Obras de Construcciòn</p>
+                    <p class="banner-subtitle">Soluciones de alta calidad para Obras de Construcción</p>
                     <div class="banner-buttons">
                         <a href="#productos" class="btn btn-primary">Ver Productos</a>
                     </div>
@@ -156,7 +156,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Obra Seco Importaciones</h3>
-                    <p>Líder en soluciones industriales con más de 25 años de experiencia en el mercado.</p>
+                    <p>Líder en soluciones industriales con 10 años de experiencia en el mercado.</p>
                     <div class="social-links">
                         <a href="https://wa.me/5491160104818?text=Hola,%20me%20interesa%20información%20sobre%20sus%20productos%20industriales" target="_blank" class="social-link whatsapp">
                             <i class="fab fa-whatsapp"></i>
@@ -166,7 +166,7 @@
                             <i class="fab fa-instagram"></i>
                             <span class="social-tooltip">Instagram</span>
                         </a>
-                        <a href="#" class="social-link facebook">
+                        <a href="https://www.facebook.com/obraseco.ok/?locale=es_LA" class="social-link facebook">
                             <i class="fab fa-facebook"></i>
                             <span class="social-tooltip">Facebook</span>
                         </a>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Industrial Catalog. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Obra Seco. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
